# pass-tool

./: LICENSE  README.md  next-sitemap.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts
.github/: dependabot.yml
components/ui/: button.tsx  confirmDialog.tsx  input.tsx  tabs.tsx
flutter_app/: pubspec.yaml
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/actions/: credit_action.dart  credit_add_action.dart  (+8 more)
flutter_app/pass_tool_core/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
flutter_app/test/: widget_test.dart
pageParts/: footer.tsx  generator.tsx  header.tsx  main.tsx  vault.tsx
pages/: 404.tsx  header.tsx  index.tsx  main.tsx  vault.tsx
public/: manifest.json  sitemap-0.xml  sw.js
src/components/: button.tsx  confirmDialog.tsx
src/layout/: footer.tsx  header.tsx  main.tsx
src/lib/: clipboard.ts  encryption.ts  password.ts
src/pages/: index.tsx
src/styles/: globals.css
styles/: globals.css
vaultcore/: .gitignore  Cargo.toml
vaultcore/src/: crypto.rs  device_keys.rs  encrypted_sync.rs  frb_generated.rs  generator.rs  kdf.rs  lib.rs  sync_message.rs  vault.rs  vault_fingerprint.rs
vaultcore/src/api/: crypto.rs  generator.rs  mod.rs  simple.rs  vault_manager.rs  vault_metadata.rs  vault_models.rs
vaultcore/tests/: crypto_tests.rs  encrypted_sync_tests.rs  generator_tests.rs  kdf_tests.rs  sync_tests.rs  vault_fingerprint_tests.rs
web-app/: next.config.js  package-lock.json  package.json  tsconfig.json
web-app/public/: robots.txt  sitemap-0.xml  sitemap.xml  sw.js
(+92 files in other folders)
