[package]
name = "pass_tool_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
base64 = "0.21"
chacha20poly1305 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
rand_core = "0.6"
uuid = { version = "1", features = ["v4"] }
zeroize = "1.5"
ed25519-dalek = "2.1.1"
sha2 = "0.10"
hex = "0.4"
x25519-dalek = "2.0.1"
hkdf = "0.12.4"
chrono = "0.4.41"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
